# ragemp-cppsdk

./: CMakeLists.txt  README.md  rage_sdk.hpp
example/: CMakeLists.txt
example/include/examples/: ExampleBlipEventHandler.hpp  ExampleCheckpointEventHandler.hpp  ExampleConnectionEventHandler.hpp  ExampleEntityEventHandler.hpp  ExampleTickEventHandler.hpp
example/src/: main.cpp
handlers/: ICheckpointHandler.hpp  IConnectionHandler.hpp  IPlayerHandler.hpp  IServerHandler.hpp  ITickHandler.hpp
include/: rage_log.hpp  rage_sdk.hpp  types.hpp
include/examples/: ExampleBlipEventHandler.hpp  ExampleCheckpointEventHandler.hpp  ExampleColshapeEventHandler.hpp  ExampleEntityEventHandler.hpp  ExampleLocalEventEventHandler.hpp  ExamplePlayerEventHandler.hpp  ExampleServerEventHandler.hpp  ExampleTickEventHandler.hpp  ExampleVehicleEventHandler.hpp
include/handlers/: IBlipHandler.hpp  ICheckpointHandler.hpp  IColshapeHandler.hpp  IEntityHandler.hpp  ILocalEventHandler.hpp  IPlayerHandler.hpp  IVehicleHandler.hpp
include/objects/: IBlip.hpp  IEntity.hpp  IPlayer.hpp
objects/: ICheckpoint.hpp  IColshape.hpp  IDummyEntity.hpp  IEntity.hpp  IMarker.hpp  IObject.hpp  IPickup.hpp  ITextLabel.hpp  IVehicle.hpp
src/: main.cpp
